[gd_scene load_steps=14 format=2]

[ext_resource path="res://Tree/Interface/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Interface/Textures/menu_splash.png" type="Texture" id=2]
[ext_resource path="res://Assets/Interface/MainMenu.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Interface/Textures/MoonwardsLogo2020_HeavyOutline_500px.png" type="Texture" id=4]
[ext_resource path="res://Tree/Interface/MainMenu/About/About.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tree/Interface/MainMenu/MainMenuHBox.gd" type="Script" id=6]
[ext_resource path="res://Assets/Interface/StyleBoxes/ChatLineEdit.tres" type="StyleBox" id=7]
[ext_resource path="res://Tree/Interface/MainMenu/MainMenuTab.gd" type="Script" id=8]
[ext_resource path="res://Tree/Interface/UserSettings/UserSettings.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/joyeux_npc_editor/interface/behaviors/Interface/Behaviour_tree_editor.tscn" type="PackedScene" id=10]




[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 18

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="MainMenu" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.25
margin_left = -480.0
margin_right = 480.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 5
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_top = 0.92
anchor_right = 0.07
anchor_bottom = 1.0
grow_vertical = 0
rect_pivot_offset = Vector2( 53.8794, 87.2272 )
focus_neighbour_top = NodePath("../HBoxContainer/VBoxContainer/Display")
focus_neighbour_right = NodePath("../About")
focus_neighbour_bottom = NodePath("../HBoxContainer/VBoxContainer/Destination")
theme = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="."]
anchor_left = 0.93
anchor_top = 0.92
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 53.8794, 87.2272 )
focus_neighbour_left = NodePath("../Quit")
focus_neighbour_top = NodePath("../HBoxContainer/VBoxContainer/Other")
focus_neighbour_bottom = NodePath("../HBoxContainer/VBoxContainer/StartGame")
theme = ExtResource( 3 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
custom_constants/separation = 120
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 161.0
margin_bottom = 540.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Destination" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 161.0
margin_bottom = 150.0
focus_neighbour_left = NodePath("../../../Quit")
focus_neighbour_top = NodePath("../Display")
focus_neighbour_right = NodePath("../../../About")
focus_neighbour_bottom = NodePath("../Avatar")
size_flags_horizontal = 0
size_flags_vertical = 0
text = "  Destination  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 105.0
margin_bottom = 205.0
focus_neighbour_left = NodePath("../../../Quit")
focus_neighbour_top = NodePath("../Destination")
focus_neighbour_right = NodePath("../../../About")
focus_neighbour_bottom = NodePath("../Controls")
size_flags_horizontal = 0
text = "  Avatar  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 225.0
margin_right = 126.0
margin_bottom = 260.0
focus_neighbour_left = NodePath("../../../Quit")
focus_neighbour_top = NodePath("../Avatar")
focus_neighbour_right = NodePath("../../../About")
focus_neighbour_bottom = NodePath("../Apps")
size_flags_horizontal = 0
disabled = true
text = "  Controls  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCs" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 131.0
margin_bottom = 315.0
focus_neighbour_left = NodePath("../../../Quit")
focus_neighbour_top = NodePath("../Controls")
focus_neighbour_right = NodePath("../../../About")
focus_neighbour_bottom = NodePath("../Display")
size_flags_horizontal = 0
text = " NPC Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apps" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 87.0
margin_bottom = 370.0
focus_neighbour_left = NodePath("../../../Quit")
focus_neighbour_top = NodePath("../Controls")
focus_neighbour_right = NodePath("../../../About")
focus_neighbour_bottom = NodePath("../Display")
size_flags_horizontal = 0
disabled = true
text = "  Apps  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 114.0
margin_bottom = 425.0
focus_neighbour_left = NodePath("../../../Quit")
focus_neighbour_top = NodePath("../Apps")
focus_neighbour_right = NodePath("../../../About")
focus_neighbour_bottom = NodePath("../Destination")
size_flags_horizontal = 0
disabled = true
text = "  Display  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="HBoxContainer"]
margin_left = 281.0
margin_right = 1536.0
margin_bottom = 540.0
rect_min_size = Vector2( 150, 180 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Tab" type="TabContainer" parent="HBoxContainer/Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1253.0
margin_bottom = 538.0
tabs_visible = false
use_hidden_tabs_for_min_size = true
script = ExtResource( 8 )

[node name="DestinationTab" type="HBoxContainer" parent="HBoxContainer/Panel/Tab"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Panel/Tab/DestinationTab"]
margin_right = 14.0
margin_bottom = 536.0
rect_min_size = Vector2( 14, 0 )
custom_styles/separator = SubResource( 2 )

[node name="StartGame" type="VBoxContainer" parent="HBoxContainer/Panel/Tab/DestinationTab"]
margin_left = 18.0
margin_right = 318.0
margin_bottom = 536.0
custom_constants/separation = 33

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Panel/Tab/DestinationTab/StartGame"]
margin_right = 300.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )
custom_styles/separator = SubResource( 3 )

[node name="JoinMainServer" type="Button" parent="HBoxContainer/Panel/Tab/DestinationTab/StartGame"]
margin_top = 41.0
margin_right = 190.0
margin_bottom = 76.0
size_flags_horizontal = 0
text = "Join Main Server"

[node name="StartCustomServer" type="Button" parent="HBoxContainer/Panel/Tab/DestinationTab/StartGame"]
margin_top = 109.0
margin_right = 234.0
margin_bottom = 144.0
size_flags_horizontal = 0
text = "Start Custom Server"

[node name="JoinServer" type="Button" parent="HBoxContainer/Panel/Tab/DestinationTab/StartGame"]
margin_top = 177.0
margin_right = 127.0
margin_bottom = 212.0
size_flags_horizontal = 0
text = "Join Server"

[node name="InputServer" type="VBoxContainer" parent="HBoxContainer/Panel/Tab/DestinationTab/StartGame"]
margin_top = 245.0
margin_right = 300.0
margin_bottom = 314.0
custom_constants/separation = -6

[node name="Label" type="Label" parent="HBoxContainer/Panel/Tab/DestinationTab/StartGame/InputServer"]
margin_right = 300.0
margin_bottom = 35.0
text = "ipv4 address:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ipv4Address" type="TextEdit" parent="HBoxContainer/Panel/Tab/DestinationTab/StartGame/InputServer"]
margin_top = 29.0
margin_right = 300.0
margin_bottom = 69.0
rect_min_size = Vector2( 300, 40 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/focus = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
text = "45.77.54.168"

[node name="AvatarTab" type="HBoxContainer" parent="HBoxContainer/Panel/Tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Panel/Tab/AvatarTab"]
margin_right = 14.0
margin_bottom = 536.0
rect_min_size = Vector2( 14, 0 )
custom_styles/separator = SubResource( 2 )

[node name="UserSettings" parent="HBoxContainer/Panel/Tab/AvatarTab" instance=ExtResource( 9 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="NPCEditor" type="HBoxContainer" parent="HBoxContainer/Panel/Tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NPCEditor" parent="HBoxContainer/Panel/Tab/NPCEditor" instance=ExtResource( 10 )]
margin_bottom = 1.0

[node name="EmptyOtherTab" type="Control" parent="HBoxContainer/Panel/Tab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="About" parent="HBoxContainer" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 1152.0
margin_bottom = 540.0
focus_neighbour_left = NodePath("../../Quit")
focus_neighbour_top = NodePath("../VBoxContainer/Display")
focus_neighbour_bottom = NodePath("../VBoxContainer/Destination")
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="About" to="." method="_on_About_pressed"]
[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/Destination" to="HBoxContainer" method="_button_highlighted" binds= [ "Destination" ]]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/Destination" to="HBoxContainer" method="_button_highlighted" binds= [ "Destination" ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Destination" to="HBoxContainer/Panel/Tab" method="_on_StartGame_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Destination" to="." method="_on_StartGame_pressed"]
[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/Avatar" to="HBoxContainer" method="_button_highlighted" binds= [ "Avatar" ]]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/Avatar" to="HBoxContainer" method="_button_highlighted" binds= [ "Avatar" ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Avatar" to="HBoxContainer/Panel/Tab" method="_on_Avatar_pressed"]
[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/Controls" to="HBoxContainer" method="_button_highlighted" binds= [ "Controls" ]]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/Controls" to="HBoxContainer" method="_button_highlighted" binds= [ "Controls" ]]
[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/NPCs" to="HBoxContainer" method="_button_highlighted" binds= [ "Apps" ]]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/NPCs" to="HBoxContainer" method="_button_highlighted" binds= [ "Apps" ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/NPCs" to="HBoxContainer/Panel/Tab" method="_on_NPCs_pressed"]
[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/Apps" to="HBoxContainer" method="_button_highlighted" binds= [ "Apps" ]]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/Apps" to="HBoxContainer" method="_button_highlighted" binds= [ "Apps" ]]
[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/Display" to="HBoxContainer" method="_button_highlighted" binds= [ "Display" ]]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/Display" to="HBoxContainer" method="_button_highlighted" binds= [ "Display" ]]
[connection signal="pressed" from="HBoxContainer/Panel/Tab/DestinationTab/StartGame/JoinMainServer" to="." method="_on_JoinMainServer_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/Tab/DestinationTab/StartGame/StartCustomServer" to="." method="_on_StartCustomServer_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/Tab/DestinationTab/StartGame/JoinServer" to="." method="_on_JoinServer_pressed"]
